src/styles.css
*, *::after, *::before {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  /*outline: 1px solid red;*/
}

html {
  height: 100%;
}

body {
  height: 100%;
  min-height: 100vh;
}

.content-wrapper {
  width: 100%;
  height: 100%;
  display: grid;
  grid-template-rows: min-content;
  background-image: url(http://localhost:63342/restaurant-page/dist/1b134c6….jpg);
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
  gap: 30px;
}

nav {
  display: grid;
  justify-content: center;
  grid-template-rows: min-content min-content;
  color: white;
  background-color: black;
  background-color: rgba(0,0,0,0.9);
  gap: 30px;
  font-weight: bold;
}

h1 {
  font-size: 3rem;
  padding: 20px;
}

.tab-menu {
  display: flex;
  gap: 30px;
  font-size: 2rem;
  list-style: none;
  padding: 10px;
}

.tab-menu li {
  color: rgba(255,255,255,0.7);
  border-bottom: 1px solid rgba(0,0,0,0);
}

.tab-menu li:hover {
  cursor: pointer;
  color: white;
  transition: all 0.5s;
  border-bottom: 1px solid white;
}

.tab-section {
  justify-self: center;
  background: black;
  display: grid;
  grid-template-rows: min-content;
  align-self: flex-start;
  color: white;
  padding: 10px;
}

